# Cpp_Patterns

./: README.md
CommandDispatcher/: CMakeLists.txt  README.md  main.cpp
CommandDispatcher/Commands/: CMakeLists.txt  ICommand.h  PayTaxCommand.h  SleepCommand.h  ThinkCommand.h
CommandDispatcher/Dispatcher/: CMakeLists.txt  CommandDispatcher.cpp  CommandDispatcher.h  IDispatcher.h
CommandDispatcher/Executor/: AnimalExecutor.cpp  AnimalExecutor.h  CMakeLists.txt  HumanExecutor.cpp  HumanExecutor.h  IExecutor.h
FactoryPattern/: CMakeLists.txt  main.cpp
FactoryPattern/Factory/: CMakeLists.txt  CarFactory.cpp  CarFactory.h
FactoryPattern/Products/: CMakeLists.txt  ElectricCar.cpp  ElectricCar.h  FuelCar.cpp  FuelCar.h  ICar.h
SingletonPattern/: CMakeLists.txt  main.cpp
SingletonPattern/Singleton/: CMakeLists.txt  Singleton.cpp  Singleton.h
SingletonPattern/SingletonPtr/: CMakeLists.txt  SingletonPtr.cpp  SingletonPtr.h
SubscribersPattern/: CMakeLists.txt  README.md  main.cpp
SubscribersPattern/Notifier/: CMakeLists.txt  INotifier.h  Notifier.cpp  Notifier.h
SubscribersPattern/Subscriber/: CMakeLists.txt  ISubscriber.h  Subscriber.cpp  Subscriber.h
